--- a/plan.html
+++ b/plan.html
@@ -23,6 +23,6 @@
 <h2>Site Flowchart (Structure Diagram)</h2>
 <p><img src="" alt="Site Flowchart"> ... </p>
 <h2>GitHub Repository</h2>
-<p><a href="http://github.com/AlexCSilva">Repo name to be implemented</a></p>
+<p><a href="http://github.com/AlexCSilva/Assignment1-CossiePlay">Assignment1-CossiePlay</a></p>
 </body>
 </html>
