updated some of the target audience

--- a/plan.html
+++ b/plan.html
@@ -19,7 +19,7 @@
 <h2>Success Evaluation</h2>
 <p> Success Evaluation to be implemented..</p>
 <h2>Target Audience</h2>
-<p>The target audiences are kids/teenagers and young adults who are interested in fantasy cosplaying. The target age range is 10-40 as that is the usual range for those interested in cosplaying.</p>
+<p>The target audiences are of all ages but mostly 35-50 who are interested in fantasy cosplaying. The target age range is 10-50 as that is the usual range for those interested in cosplaying.</p>
 <h2>Site Flowchart (Structure Diagram)</h2>
 <p><img src="" alt="Site Flowchart"> ... </p>
 <h2>GitHub Repository</h2>
