--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>CossiePlay - Home</title>
 </head>
 <body>
-<h1>About CossiePlay</h1>
-<p>Test test one two three</p>
+<h1>CossiePlay - Home</h1>
+<p>links go here</p>
+<h2>About CossiePlay</h2>
+<p>Test test one two three </p>
 </body>
 </html>
