--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CossiePlay - Sign-Up</title>
+    <link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
