--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CossiePlay - Contact Us</title>
+    <link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1>CossiePlay - Contact Us</h1>
