--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CossiePlay - Home</title>
+    <link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1>CossiePlay - Home</h1>
