--- a/contacts.html
+++ b/contacts.html
@@ -10,8 +10,9 @@
 <p>links go here</p>
 <h2>Contacts</h2>
 <p>Phone: 07 4771 1234</p>
-<p>fax: 07-4771 1235</p>
-<p>address: 4 Stanton Avenue, Hulkstwon</p>
+<p>Fax: 07-4771 1235</p>
+<p>Address: 4 Stanton Avenue, Hulkstwon</p>
 <p>Email: cossieplay@ gmail.com.</p>
+<footer>© 2016 Designed by Alex Silva</footer>
 </body>
 </html>
