--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<header>test</header>
 <h1>CossiePlay - Home</h1>
 <p>links go here</p>
 <h2>What is Cosplay?</h2>
@@ -15,5 +16,6 @@
 <p>Reproduced from https://en.wikipedia.org/wiki/Cosplay</p>
 <h2>About CossiePlay</h2>
 <p>Test test one two three </p>
+<footer>© 2016 Designed by Alex Silva</footer>
 </body>
 </html>
