--- a/store.html
+++ b/store.html
@@ -6,6 +6,6 @@
     <link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+<footer>© 2016 Designed by Alex Silva</footer>
 </body>
 </html>
