--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<header>test</header>
 <h1>CossiePlay - Home</h1>
-<p>links go here</p>
+<nav>Links go here?</nav>
 <h2>What is Cosplay?</h2>
 <p><img src="images/boromir-4-1478698.jpg" width="157" height="175" alt=""/></p>
 <p>Cosplay, a portmanteau of the words costume play, is a performance art in which participants called cosplayers wear costumes and fashion accessories to represent a specific character. Cosplayers often interact to create a subculture and a broader use of the term "cosplay" applies to any costumed role-playing in venues apart from the stage. Any entity that lends itself to dramatic interpretation may be taken up as a subject and it is not unusual to see genders switched. Favorite sources include manga and anime, comic books and cartoons, video games, and live-action films and television series.</p>
