added a navigation; needs work though

--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>CossiePlay - Contact Us</h1>
-<p>links go here</p>
+<nav>Links go here?</nav>
 <h2>Contacts</h2>
 <p>Phone: 07 4771 1234</p>
 <p>Fax: 07-4771 1235</p>
