--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,7 @@
     <link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<nav>Links go here?</nav>
 <footer>© 2016 Designed by Alex Silva</footer>
 </body>
 </html>
