--- a/contacts.html
+++ b/contacts.html
@@ -13,6 +13,6 @@
 <p>Fax: 07-4771 1235</p>
 <p>Address: 4 Stanton Avenue, Hulkstwon</p>
 <p>Email: cossieplay@ gmail.com.</p>
-<footer>© 2016 Designed by Alex Silva</footer>
+<footer>© 2016 Web Design by Alex Silva</footer>
 </body>
 </html>
