--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>CossiePlay - Home</h1>
-<nav>Links go here?</nav>
+<nav><a href="index.html">About Us</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
 <h2>What is Cosplay?</h2>
 <p><img src="images/boromir-4-1478698.jpg" width="157" height="175" alt=""/></p>
 <p>Cosplay, a portmanteau of the words costume play, is a performance art in which participants called cosplayers wear costumes and fashion accessories to represent a specific character. Cosplayers often interact to create a subculture and a broader use of the term "cosplay" applies to any costumed role-playing in venues apart from the stage. Any entity that lends itself to dramatic interpretation may be taken up as a subject and it is not unusual to see genders switched. Favorite sources include manga and anime, comic books and cartoons, video games, and live-action films and television series.</p>
@@ -17,6 +17,6 @@
 <p>CossiePlay is a family-run business, operating in Hulkstown since 2012. We create outstanding custom-made costumes. Cosplayers can order any kind of costume - from simple Spiderman or elf costumes right up to costumes including advanced features like armour, animatronics, realistic weaponry and working force fields. Depending on the difficulty, costumes take between 1 and 50 weeks and cost between $10 and $10,000.</p>
 <p>We buy and sell second-hand costumes (a price list is available) as well.</p>
 <p>On the first Saturday of every month we hold a “CossiePlay Party” at the town hall. Entry is $15 for adults, $10 for ages 6-17 and kids under 6 are free. Each entry includes one non-alcoholic drink and a glow stick. Parties start at 6pm and run until 11pm. There is always a live DJ at the party (who takes requests) and dancing is common (but not required).</p>
-<footer>© 2016 Designed by Alex Silva</footer>
+<footer>© 2016 Web Design by Alex Silva</footer>
 </body>
 </html>
