--- a/store.html
+++ b/store.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <nav>Links go here?</nav>
-<footer>© 2016 Designed by Alex Silva</footer>
+<footer>© 2016 Web Design by Alex Silva</footer>
 </body>
 </html>
