--- a/events.html
+++ b/events.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CossiePlay - Sign-Up</title>
-    <link href="mainstyles.css" rel="stylesheet" type="text/css">
+    <title>CossiePlay - Events</title>
 </head>
 <body>
+<h1>CossiePlay - Events</h1>
 <nav><a href="index.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
-<footer>© 2016 Web Design by Alex Silva</footer>
 </body>
 </html>
