--- a/store.html
+++ b/store.html
@@ -6,7 +6,7 @@
     <link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<nav>Links go here?</nav>
+<nav><a href="index.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
 <footer>© 2016 Web Design by Alex Silva</footer>
 </body>
 </html>
