--- a/events.html
+++ b/events.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CossiePlay - Events</title>
+    <link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1>CossiePlay - Events</h1>
