--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,8 @@
     <link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<h1>CossiePlay - Sign-Up</h1>
+<h3>Sign Up</h3>
 <nav><a href="index.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
 <footer>© 2016 Web Design by Alex Silva</footer>
 </body>
