--- a/events.html
+++ b/events.html
@@ -8,5 +8,14 @@
 <body>
 <h1>CossiePlay - Events</h1>
 <nav><a href="index.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
+<p><img src="images/book-fair-678264_1280.jpg" width="370" height="350" alt="">&nbsp;<img src="images/party-1506740-640x480.jpg" width="370" height="350" alt="">&nbsp;Join in the fun!</p>
+<h2>Sign-Up</h2>
+<p>Please register to come to a party by emailing us.</p>
+<p>Requirements:</p>
+<p></p>
+<h2>Party Guidelines</h2>
+<p>CossiePlay party-goers party at their own risk and are responsible for their own safety. Check with your doctor before you party hard.</p>
+<p>Party fees must be paid at the door. Cash or EFTPOS accepted. Credit card payments attract a 2% surcharge. Alcohol is served at the bar to over 18s only. No intoxicated persons will be served, but will be escorted to a taxi – paid by the party-goer. </p>
+<footer>© 2016 Web Design by Alex Silva</footer>
 </body>
 </html>
