--- a/events.html
+++ b/events.html
@@ -10,7 +10,7 @@
 <nav><a href="index.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
 <p><img src="images/book-fair-678264_1280.jpg" width="380" height="350" alt="">&nbsp;<img src="images/party-1506740-640x480.jpg" width="370" height="350" alt=""></p>
 <h2>Sign-Up</h2>
-<p>Please register to come to a party by emailing us.</p>
+<p>Please register to come to a party by <a href="contacts.html">emailing us.</a></p>
 <h3>Requirements:</h3>
 <ul>
     <li>Contact person name</li>
