--- a/store.html
+++ b/store.html
@@ -8,7 +8,7 @@
 <body>
 <h1>CossiePlay - Store</h1>
 <nav><a href="index.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
-<h2>Test</h2>
+<h2>Price List</h2>
 <footer>© 2016 Web Design by Alex Silva</footer>
 </body>
 </html>
