--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <h1>CossiePlay - Home</h1>
 <nav><a href="index.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
 <h2>About CossiePlay</h2>
+<p><img src="images/winter-kingdom-798279_1920.jpg" width="275" height="255" alt=""></p>
 <p>CossiePlay is a family-run business, operating in Hulkstown since 2012. We create outstanding custom-made costumes. Cosplayers can order any kind of costume - from simple Spiderman or elf costumes right up to costumes including advanced features like armour, animatronics, realistic weaponry and working force fields. Depending on the difficulty, costumes take between 1 and 50 weeks and cost between $10 and $10,000.</p>
 <p>We buy and sell second-hand costumes (a price list is available) as well.</p>
-<p>On the first Saturday of every month we hold a “CossiePlay Party” at the town hall. Entry is $15 for adults, $10 for ages 6-17 and kids under 6 are free. Each entry includes one non-alcoholic drink and a glow stick. Parties start at 6pm and run until 11pm. There is always a live DJ at the party (who takes requests) and dancing is common (but not required).</p>
+<p>On the first Saturday of every month we hold a “CossiePlay Party” at the town hall. Head over to the <a href="events.html">Events</a> section for more information.</p>
 <h2>What is Cosplay?</h2>
 <p><img src="images/boromir-4-1478698.jpg" width="157" height="175" alt=""/></p>
 <p>Cosplay, a portmanteau of the words costume play, is a performance art in which participants called cosplayers wear costumes and fashion accessories to represent a specific character. Cosplayers often interact to create a subculture and a broader use of the term "cosplay" applies to any costumed role-playing in venues apart from the stage. Any entity that lends itself to dramatic interpretation may be taken up as a subject and it is not unusual to see genders switched. Favorite sources include manga and anime, comic books and cartoons, video games, and live-action films and television series.</p>
