--- a/store.html
+++ b/store.html
@@ -5,10 +5,81 @@
     <title>CossiePlay - Store</title>
     <link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
+<style>
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+    th, td {
+        padding: 5px;
+    }
+</style>
 <body>
 <h1>CossiePlay - Store</h1>
 <nav><a href="index.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
 <h2>Price List</h2>
-<footer>© 2016 Web Design by Alex Silva</footer>
+<table style="width:100%">
+    <tr>
+        <th>Costume</th>
+        <th>Size</th>
+        <th>Price</th>
+    </tr>
+    <tr>
+        <td>Spiderman</td>
+        <td>12</td>
+        <td>$49</td>
+    </tr>
+    <tr>
+        <td>Elf</td>
+        <td>16</td>
+        <td>$35</td>
+    </tr>
+    <tr>
+        <td>Darth Vader</td>
+        <td>M</td>
+        <td>$149</td>
+    </tr>
+    <tr>
+        <td>Iron Man (with rocket boots)</td>
+        <td>M</td>
+        <td>$2500</td>
+    </tr>
+    <tr>
+        <td>Bayonetta</td>
+        <td>8</td>
+        <td>$300</td>
+    </tr>
+    <tr>
+        <td>Diablo III - Demon Hunter</td>
+        <td>10</td>
+        <td>$250</td>
+    </tr>
+    <tr>
+        <td>Harley Quinn</td>
+        <td>18</td>
+        <td>$125</td>
+    </tr>
+    <tr>
+        <td>Metroid - Samus Aran</td>
+        <td>L</td>
+        <td>$850</td>
+    </tr>
+    <tr>
+        <td>Peter Oabr</td>
+        <td>XS</td>
+        <td>$49</td>
+    </tr>
+    <tr>
+        <td>Princess Leia (White)</td>
+        <td>10</td>
+        <td>$100</td>
+    </tr>
+    <tr>
+        <td>Spock (Star Trek)</td>
+        <td>S</td>
+        <td>$1235</td>
+    </tr>
+</table>
 </body>
+<footer>© 2016 Web Design by Alex Silva</footer>
 </html>
