--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>CossiePlay - Contact Us</h1>
-<nav><a href="index.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
+<nav><a href="index.html">Home</a>&nbsp;<a href="about.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
 <h2>Contacts</h2>
 <p>Phone: 07 4771 1234</p>
 <p>Fax: 07-4771 1235</p>
