--- a/events.html
+++ b/events.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>CossiePlay - Events</h1>
-<nav><a href="index.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
+<nav><a href="index.html">Home</a>&nbsp;<a href="about.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="links.html">Links</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
 <p><img src="images/book-fair-678264_1280.jpg" width="380" height="350" alt="" align="right"><img src="images/party-1506740-640x480.jpg" width="370" height="350" alt="" align=right></p>
 <h2>CossiePlay Party!</h2>
 <p>Entry is $15 for adults, $10 for ages 6-17 and kids under 6 are free. Each entry includes one non-alcoholic drink and a glow stick. Parties start at 6pm and run until 11pm. There is always a live DJ at the party (who takes requests) and dancing is common (but not required).</p>
