--- a/store.html
+++ b/store.html
@@ -16,7 +16,7 @@
 </style>
 <body>
 <h1>CossiePlay - Store</h1>
-<nav><a href="index.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
+<nav><a href="index.html">Home</a>&nbsp;<a href="about.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="links.html">Links</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
 <h2>Price List</h2>
 <table style="width:100%">
     <tr>
