added a list for announcements

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <h1>CossiePlay - Home</h1>
 <nav><a href="index.html">Home</a>&nbsp;<a href="about.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="links.html">Links</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
 <h2>Announcements</h2>
+<ul>
+    <li>We have some cool things happening that we want people to know about: this month you can purchase 3 drinks for the price of 2 at the bar</li>
+    <li>First-time party-goers get a 50% discount on entry</li>
+    <li>If you get a costume custom made, your next party entry is free if you wear that costume.</li>
+    <li>Wear your costume in to KFC on Stanton street and you can get a free drink with a 21-piece bucket.</li>
+    <li>Tell them you’ve been to CossiePlay!</li>
+</ul>
 <h2>What is Cosplay?</h2>
 <p><img src="images/boromir-4-1478698.jpg" width="255" height="275" alt="" align="left"/></p>
 <p>Cosplay, a portmanteau of the words costume play, is a performance art in which participants called cosplayers wear costumes and fashion accessories to represent a specific character. Cosplayers often interact to create a subculture and a broader use of the term "cosplay" applies to any costumed role-playing in venues apart from the stage. Any entity that lends itself to dramatic interpretation may be taken up as a subject and it is not unusual to see genders switched. Favorite sources include manga and anime, comic books and cartoons, video games, and live-action films and television series.</p>
