--- a/plan.html
+++ b/plan.html
@@ -12,8 +12,8 @@
 
 <body>
 <h1>CP1406 - Assignment 1 - Project Plan - CossiePlay</h1>
-<p><strong>Name:</strong> ...<br>
-<strong>Login:</strong> ...</p>
+<p><strong>Name:</strong> Alex Silva<br>
+<strong>Login:</strong> jc282222</p>
 <h2>Goals</h2>
 <p>The main purpose of this website is to meet requirements that will satisfy the client.</p>
 <h2>Success Evaluation</h2>
@@ -21,7 +21,7 @@
 <h2>Target Audience</h2>
 <p>The target audiences are of all ages but mostly 35-50 who are interested in fantasy cosplaying. The target age range is 10-50 as that is the usual range for those interested in cosplaying.</p>
 <h2>Site Flowchart (Structure Diagram)</h2>
-<p><img src="" alt="Site Flowchart"> ... </p>
+<p><img src="images/a1siteflowchart.png" alt="Site Flowchart"> ... </p>
 <h2>GitHub Repository</h2>
 <p><a href="http://github.com/AlexCSilva/Assignment1-CossiePlay">Assignment1-CossiePlay</a></p>
 </body>
