--- a/about.html
+++ b/about.html
@@ -10,14 +10,13 @@
 <nav><a href="index.html">Home</a>&nbsp;<a href="about.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="links.html">Links</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
 <h2>About CossiePlay</h2>
 <p><img src="images/winter-kingdom-798279_1920.jpg" width="275" height="255" alt="" align="left"></p>
-<p>CossiePlay is a family-run business, operating in Hulkstown since 2012. We create outstanding custom-made costumes. Cosplayers can order any kind of costume - from simple Spiderman or elf costumes right up to costumes including advanced features like armour, animatronics, realistic weaponry and working force fields. Depending on the difficulty, costumes take between 1 and 50 weeks and cost between $10 and $10,000.</p>
+<p><strong>CossiePlay</strong> is a family-run business, operating in Hulkstown since 2012. We create outstanding custom-made costumes. Cosplayers can order any kind of costume - from simple Spiderman or elf costumes right up to costumes including advanced features like armour, animatronics, realistic weaponry and working force fields. Depending on the difficulty, costumes take between 1 and 50 weeks and cost between $10 and $10,000.</p>
 <p>We buy and sell second-hand costumes <a href="store.html">(a price list is available)</a> as well.</p>
 <p>On the first Saturday of every month we hold a “CossiePlay Party” at the town hall. Head over to the <a href="events.html">Events</a> section for more information.</p>
 <h2>Who's Who</h2></h3>
-<p>The CossiePlay family is:</p>
-<p>Steven Rogers – Steve was a Navy Seal for 37 years before getting interested in hosting parties and helping people enyoj their fantasies together in a family-friendly fun environment.</p>
-<p>Sally Rogers – After only 6 weeks of her first dress-making course, Sally was already designing and sewing elaborate ball gowns and costumes that amazed her instructors. 10 years later and she’s making even more amazing creations for happy customers.</p>
-<p>(our photos are provided)</p>
+<p>The <strong>CossiePlay</strong> family is:</p>
+<p><img src="images/SteveRogers.jpg" length="157", width="175", align="left">Steven Rogers – Steve was a Navy Seal for 37 years before getting interested in hosting parties and helping people enyoj their fantasies together in a family-friendly fun environment.</p>
+<p><img src="images/SallyRogers.jpg"length ="157", width="175", align="left"> Sally Rogers – After only 6 weeks of her first dress-making course, Sally was already designing and sewing elaborate ball gowns and costumes that amazed her instructors. 10 years later and she’s making even more amazing creations for happy customers.</p>
 <footer>© 2016 Web Design by Alex Silva</footer>
 </body>
 </html>
