added more information to sections

--- a/plan.html
+++ b/plan.html
@@ -15,11 +15,11 @@
 <p><strong>Name:</strong> Alex Silva<br>
 <strong>Login:</strong> jc282222</p>
 <h2>Goals</h2>
-<p>The main purpose of this website is to meet requirements that will satisfy the client.</p>
+<p>The main purpose of this website is to meet requirements that will satisfy the client. This includes; providing information about the client/s' personal information and services. Another goal is to provide a contact page for users to be able to contact the client/s to be able to book a party or purchase costumes.</p>
 <h2>Success Evaluation</h2>
-<p> Success Evaluation to be implemented..</p>
+<p>The websites successs will be evlautated by user testing and web analytics. From user testing, I can gain feedback from users who could also be interested in the specific topic of the website. Then possible new features may be added to make users more satisfied. Web analytics can provide information on visitor details, whever or not they visited for a long time and if they continue to visit.</p>
 <h2>Target Audience</h2>
-<p>The target audiences are of all ages but mostly 35-50 who are interested in fantasy cosplaying. The target age range is 10-50 as that is the usual range for those interested in cosplaying.</p>
+<p>The target audiences are of all ages but mostly 35-50 who are interested in fantasy cosplaying. The target age range is 10-50 as that is the usual range for those interested in cosplaying. To cater to this group, the design of the website will have a nice colourful appeal to it with playful images and useful information.</p>
 <h2>Site Flowchart (Structure Diagram)</h2>
 <p><img src="images/a1siteflowchart.png" alt="Site Flowchart"> ... </p>
 <h2>GitHub Repository</h2>
