--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <li>Wear your costume in to KFC on Stanton street and you can get a free drink with a 21-piece bucket.</li>
     <li>Tell them you’ve been to CossiePlay!</li>
 </ul>
+<p>Welcome to <strong>CossiePlay</strong> home to the greatest Cosplay parties!</p>
 <h2>What is Cosplay?</h2>
 <p><img src="images/boromir-4-1478698.jpg" width="255" height="275" alt="" align="left"/></p>
 <p>Cosplay, a portmanteau of the words costume play, is a performance art in which participants called cosplayers wear costumes and fashion accessories to represent a specific character. Cosplayers often interact to create a subculture and a broader use of the term "cosplay" applies to any costumed role-playing in venues apart from the stage. Any entity that lends itself to dramatic interpretation may be taken up as a subject and it is not unusual to see genders switched. Favorite sources include manga and anime, comic books and cartoons, video games, and live-action films and television series.</p>
