added links and footer

--- a/links.html
+++ b/links.html
@@ -9,8 +9,9 @@
 <h1>CossiePlay - Links</h1>
 <nav><a href="index.html">Home</a>&nbsp;<a href="about.html">About Us</a>&nbsp;<a href="events.html">Events</a>&nbsp;<a href="store.html">Store</a>&nbsp;<a href="links.html">Links</a>&nbsp;<a href="contacts.html">Contact Us</a></nav>
 <h2>Useful Links</h2>
-<p>https://en.wikipedia.org/wiki/Cosplay (Wikipedia entry for cosplay)</p>
-<p>http://www.cosplay.com - world largest cosplay community</p>
-<p>http://cosplaytutorial.com/index.php – resource for costumers</p>
+<p><a href="https://en.wikipedia.org/wiki/Cosplay">Wikipedia Entry for Cosplay</a> </p>
+<p><a href=" http://www.cosplay.com">World Largest Cosplay Community</a></p>
+<p><a href="http://cosplaytutorial.com/index.php">Resource for costumers</a></p>
+<footer>© 2016 Web Design by Alex Silva</footer>
 </body>
 </html>
