--- a/store.html
+++ b/store.html
@@ -80,6 +80,7 @@
         <td>$1235</td>
     </tr>
 </table>
-</body>
+<p><img src="images/spiderman-in-nature-2-1258899-640x480.jpg" width="157", length="175", align=""> </p>
 <footer>© 2016 Web Design by Alex Silva</footer>
+</body>
 </html>
